--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build -p 8270",
-    "start": "next start -p 8270",
+    "build": "next build ",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
